# rocBLAS-Examples

./: CHANGELOG.md  CMakeLists.txt  Jenkinsfile  LICENSE.md  Makefile  README.md  rmake.py  rtest.py  rtest.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.jenkins/: common.groovy  precheckin.groovy
BuildTools/CMake/: CMakeLists.txt  Makefile  Makefile-run-cmake  Makefile.cmake  README.md
BuildTools/CMake/src/: CMakeLists.txt  main.cpp
Extensions/gemm_ex_bf16_r/: Makefile  README.md  gemm_ex_bf16_r.cpp
Extensions/gemm_ex_f16_r/: Makefile  README.md  gemm_ex_f16_r.cpp
Extensions/gemm_ex_f32_r/: Makefile  README.md  gemm_ex_f32_r.cpp
Extensions/gemm_ex_i8_i32_r/: Makefile  README.md  gemm_ex_i8_i32_r.cpp
Languages/C/: C  Makefile  README.md  main.c
Languages/Fortran/: Fortran  Makefile  main.f90
Languages/HIP/: HIP  Makefile  README.md  kernel.cpp  main.cpp
Level-1/axpy/: Makefile  README.md  axpy  axpy.cpp
Level-1/dot/: Makefile  README.md  dot  dot.cpp
Level-1/nrm2/: Makefile  README.md  nrm2  nrm2.cpp
Level-1/scal/: Makefile  README.md  scal  scal.cpp
Level-1/swap/: Makefile  README.md  swap  swap.cpp
Level-2/gemv/: Makefile  README.md  gemv  gemv.cpp
Level-2/her/: Makefile  README.md  her  her.cpp
Level-2/trmv/: README.md  trmv.cpp
Level-3/: Makefile
Level-3/gemm/: Makefile  README.md  gemm  gemm.cpp
Level-3/gemm_strided_batched/: Makefile  README.md  gemm_strided_batched  gemm_strided_batched.cpp
Patterns/Multi-device/: Makefile  Multi-device  Multi-device.cpp  README.md
Patterns/Multi-stream/: Makefile  Multi-stream  Multi-stream.cpp  README.md  symv.cpp
common/: ArgParser.cpp  ArgParser.hpp  errorHelpers.cpp  errorHelpers.hpp  error_macros.h  helpers.hpp  memoryHelpers.hpp  timers.hpp
docker/: dockerfile-build-centos  dockerfile-build-sles  dockerfile-build-ubuntu-rock  dockerfile-install-centos  dockerfile-install-sles  dockerfile-install-ubuntu
